TAP5-2814: Upgrade ASM to 9.9